erDiagram

Schools ||--o{ Users: has
Schools ||--o{ Events: has
Schools ||--o{ Announcements: has
Schools ||--o{ Resources: has
Schools ||--o{ Venues: has
Schools ||--o{ EventTypes: has
Schools ||--o{ Surveys: has

Users }|--o{ UserRoles: ""
Roles }|--o{ UserRoles: ""
Users ||--o{ Events: "organize"
Users ||--o{ Tasks: "create"
Users ||--o{ Attendance: "check-in"
Users ||--o{ Registrations: ""
Users ||--o{ Announcements: "author"
Users ||--o{ Surveys: "create"
Users ||--o{ SurveyResponses: "respond"

Roles ||--o{ RolePermissions: ""
Permissions ||--o{ RolePermissions: ""

Events ||--o{ EventSchedules: "has"
Events ||--|{ EventTypes: "type"
Events ||--o{ Tasks: "has"
Events ||--o{ Announcements: "linked"
Events ||--o{ Surveys: "linked"

EventSchedules ||--o{ Registrations: ""
EventSchedules ||--o{ Attendance: ""
EventSchedules ||--o{ EventResources: ""
EventSchedules ||--|| Venues: "uses"

Venues ||--o{ EventSchedules: "host"

Resources ||--o{ EventResources: "used-in"

Surveys ||--o{ SurveyQuestions: "has"
SurveyQuestions ||--|| SurveyQuestionTypes: "type"
SurveyQuestions ||--o{ SurveyQuestionOptions: "options"
SurveyQuestions ||--o{ SurveyAnswers: "answers"
SurveyResponses ||--o{ SurveyAnswers: ""
Surveys ||--o{ SurveyResponses: "has"
